[add] userInfo act ui, aboutMe act ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,33 @@
     <string name="scan_qrcode">掃描QR條碼</string>
 
     <string name="add_new_account">新增帳號</string>
+
+    <string name="self_icon">個人頭像</string>
+
+    <string name="camera">相機</string>
+    <string name="gallery">圖片庫</string>
+
+    <string name="cancel">取消</string>
+    <string name="save">儲存</string>
+
+    <string name="pls_input_your_name">請輸入您的名子</string>
+
+    <string name="about">關於</string>
+    <string name="delete_all">全部刪除</string>
+    <string name="delete">刪除</string>
+    
+    <string-array name="about_list">
+        <item>你好! 我正在使用JoyCom</item>
+        <item>睡眠中</item>
+        <item>有空</item>
+        <item>忙碌中</item>
+        <item>在學校</item>
+        <item>看電影中</item>
+        <item>工作中</item>
+        <item>電池即將用盡</item>
+        <item>無法接電話，請用JoyCom聯繫</item>
+        <item>會議中</item>
+        <item>在健身房</item>
+        <item>緊急電話才接</item>
+    </string-array>
 </resources>
